@@ -109,6 +109,28 @@ OCC wizard {
   }
 }
 
+
+OCC druid {
+  name        "druid";
+  magic       2.0;
+  container   t_chest1;
+  traps {
+    t_poison_trap;
+  }
+  arms {
+    t_dagger;
+    t_oil;
+  }
+  items {
+    t_dagger       100 1;
+    t_oil          50  10;
+    t_light_potion 50  5;
+    t_green_potion 50  2;
+    t_red_potion   75  5;
+    t_blue_potion  50  2;
+  }
+}
+
 OCC merchant {
   name        "merchant";
   magic       0.0;
