@@ -212,6 +212,7 @@ extern "C" {
         extern Uint32 place_get_color(struct place *place, int x, int y);
         extern int place_get_movement_cost(struct place *place, int x, int y);
         extern int place_adjust_turn_cost(struct place *place, int turns);
+        extern int place_is_hazardous(struct place *place, int x, int y);
 
 	extern class NpcParty *place_random_encounter(struct place *);
 
